# my_ledge

./: .env.example  .gitignore  AGENTS.md  PRD.md  README.md  STATUS.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260323_0001_initial_schema.py  20260326_0002_canonical_views.py  20260326_0003_cost_classification_fields.py  20260330_0004_filter_transactions_effective_view.py  20260402_0005_add_merchant_to_transactions.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  asset_snapshot.py  base.py  investment.py  loan.py  transaction.py  upload_log.py
backend/app/parsers/: __init__.py  decrypt.py  snapshots.py  transactions.py
backend/app/schemas/: analytics.py  asset.py  common.py  data_management.py  schema_doc.py  transaction.py  upload.py
backend/app/services/: __init__.py  analytics_service.py  assets_service.py  canonical_views.py  data_reset_service.py  schema_service.py  source_verification.py  transactions_service.py  upload_service.py
backend/scripts/: smoke_import_transactions.py  verify_import_parity.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_security.py
backend/tests/api/: test_analytics_api.py  test_assets_api.py  test_data_management_api.py  test_schema_api.py  test_transactions_api.py  test_upload_api.py
backend/tests/parsers/: test_decrypt.py  test_snapshots_parser.py  test_transactions_parser.py
(+278 files in other folders)
